# absbot

./: .gitignore  README.md  absbot.py  browser.py  mockrequest  request  test.py  token
absbot-python/: absbot.bat  absbot.py  cmd_request
absbot-rusty/: Cargo.toml
absbot-rusty/src/: main.rs
