[package]
name = "absbot"
version = "0.1.0"
authors = ["Alessandro <alegnani@ethz.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour_sync = "0.24.1"
serde_json = "1.0.59"
reqwest = {"version" = "0.11.3", "features" = ["blocking"]}
chrono = "0.4.19"
anyhow = "1"